--- a/about.html
+++ b/about.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Picture Market - About Us</title>
+    <title>Picture Market – About</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Picture Market</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
+    <header class="site-header">
+        <div class="container">
+            <h1>Picture Market</h1>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="login.html">Login</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-   
-    <section>
-        <h2>About Us</h2>
-        <p>We are a high school team learning to make a site where you can upload and buy pictures!</p>
-        <p>Our goal is to practice HTML, CSS, and now JavaScript.</p>
-    </section>
-   
-    <footer>
-        <p>Made by me in high school &copy; 2025</p>
+
+    <main class="container">
+        <section class="about">
+            <h2>About Us</h2>
+            <p>We are a group of high-school students learning HTML, CSS and JavaScript.</p>
+            <p>Our goal: a simple marketplace where anyone can upload a photo and sell it to others.</p>
+            <p>No real payment yet – just practicing!</p>
+        </section>
+    </main>
+
+    <footer class="site-footer">
+        <div class="container">
+            <p>Made by me in high-school – © 2025</p>
+        </div>
     </footer>
 </body>
 </html>
